--- a/css/main.css
+++ b/css/main.css
@@ -1823,7 +1823,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #ff2040;
+  background: #71c24e;
 }
 .links-of-blogroll {
   font-size: 13px;
