--- a/css/main.css
+++ b/css/main.css
@@ -1823,7 +1823,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #1cf912;
+  background: #57ff95;
 }
 .links-of-blogroll {
   font-size: 13px;
@@ -2844,8 +2844,28 @@ pre .javascript .function {
   bottom: auto;
   -webkit-transform: none;
 }
+@media screen and (min-device-aspect-ratio: 16/9) {
+  .sidebar-inner {
+    box-sizing: border-box;
+    margin-top: 0 !important;
+    width: 240px;
+    color: #555;
+    background: #fff;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.06), 0 1px 5px 0 rgba(0,0,0,0.12), 0 -1px 0.5px 0 rgba(0,0,0,0.09);
+    border-radius: initial;
+    opacity: 0;
+  }
+  .sidebar-inner.affix {
+    position: fixed;
+    top: 12px;
+  }
+  .sidebar-inner.affix-bottom {
+    position: absolute;
+  }
+}
 .sidebar-inner {
   box-sizing: border-box;
+  margin-top: 2.5rem;
   width: 240px;
   color: #555;
   background: #fff;
